--- a/ImageFilter/ImageFilter/Base.lproj/Main.storyboard
+++ b/ImageFilter/ImageFilter/Base.lproj/Main.storyboard
@@ -45,6 +45,13 @@
                                     <action selector="setImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hso-1i-FAf"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tz4-JC-yLA">
+                                <rect key="frame" x="108" y="436" width="61" height="30"/>
+                                <state key="normal" title="Contrast"/>
+                                <connections>
+                                    <action selector="setContrastFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x6e-zS-wl1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
