--- a/ImageFilter/ImageFilter/Base.lproj/Main.storyboard
+++ b/ImageFilter/ImageFilter/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
@@ -35,7 +34,7 @@
                                 <rect key="frame" x="112" y="390" width="53" height="30"/>
                                 <state key="normal" title="+Mono"/>
                                 <connections>
-                                    <action selector="setMonoFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n2H-tA-UWf"/>
+                                    <action selector="addMonoFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cED-bf-KM7"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QVO-U0-QRM">
@@ -49,7 +48,7 @@
                                 <rect key="frame" x="105" y="436" width="69" height="30"/>
                                 <state key="normal" title="+Contrast"/>
                                 <connections>
-                                    <action selector="setContrastFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x6e-zS-wl1"/>
+                                    <action selector="addContrastFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7H7-AH-SNS"/>
                                 </connections>
                             </button>
                         </subviews>
